all requests completed
